One change is done

--- a/Form_Examples/form3.html
+++ b/Form_Examples/form3.html
@@ -6,7 +6,7 @@
     <body>
         <form>
             <table cellspacing="5px" cellpadding="5px" align="center" bgcolor="silver">
-                <caption>Registration Form</caption>
+                <caption><h2>Registration Form</h2></caption>
                 <tr>
                     <td>
                         <label>First Name</label><br>
