Some updations were happened

--- a/Form_Examples/form1.html
+++ b/Form_Examples/form1.html
@@ -4,47 +4,47 @@
         <title>Form-1</title>
     </head>
     <body>
-        <form><br>
+        <form name="form1" action="Servlet1" method="get"><br>
             <table cellpadding="5px" cellspacing="5px" align="center" bgcolor="silver">
                <caption><h2>HTML Form</h2></caption>
                 <tr>
                     <td>
-                        <label>First Name:</label>
+                        <label for="label1">First Name:</label>
                     </td>
                     <td>
-                        <input type="text">
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <label>Last Name:</label>
-                    </td>
-                    <td>
-                        <input type="text">
+                        <input type="text" name="inp1" id="label1">
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <label>Date of Birth:</label>
+                        <label for="label2" >Last Name:</label>
                     </td>
                     <td>
-                        <input type="text">
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <label>Email Id:</label>
-                    </td>
-                    <td>
-                        <input type="email">
+                        <input type="text" name="inp2" id="label2">
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <label>Mobile Number:</label>
+                        <label for="label3" >Date of Birth:</label>
                     </td>
                     <td>
-                        <input type="number">
+                        <input type="text" name="inp3" id="label3">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="label4">Email Id:</label>
+                    </td>
+                    <td>
+                        <input type="email" name="inp4" id="label4">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="label5">Mobile Number:</label>
+                    </td>
+                    <td>
+                        <input type="number" name="inp5" id="label5">
                     </td>
                 </tr>
                 <tr>
