--- a/Form_Examples/form2.html
+++ b/Form_Examples/form2.html
@@ -4,55 +4,55 @@
         <title>Form-2</title>
     </head>
     <body>
-        <form>
+        <form name="form2" action="Servlet2" method="post">
             <table cellpadding="5px" cellspacing="5px" align="center" bgcolor="silver">
                 <caption><h1>Registration Form</h1></caption>
                 <tr>
                     <td>
-                        <label>First Name</label>
+                        <label for="fname">First Name</label>
                     </td>
                     <td>
-                        <input type="text">
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <label>Last Name</label>
-                    </td>
-                    <td>
-                        <input type="text">
+                        <input type="text" id="fname" name="fn">
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <label>Nick Name</label>
+                        <label for="lname">Last Name</label>
                     </td>
                     <td>
-                        <input type="text">
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <label>E-Mail</label>
-                    </td>
-                    <td>
-                        <input type="email">
+                        <input type="text" id="lname" name="ln">
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <label>Password</label>
+                        <label for="nname">Nick Name</label>
                     </td>
                     <td>
-                        <input type="password">
+                        <input type="text" id="nname" name="nn">
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <label>Date of Birth</label>
+                        <label for="email">E-Mail</label>
                     </td>
                     <td>
-                        <input type="text">
+                        <input type="email" id="email" name="em">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="pwd">Password</label>
+                    </td>
+                    <td>
+                        <input type="password" id="pwd" name="password">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="dob">Date of Birth</label>
+                    </td>
+                    <td>
+                        <input type="text" id="dob" name="DOB">
                     </td>
                 </tr>
                 <tr>
@@ -60,25 +60,25 @@
                         <label>Gender</label>
                     </td>
                     <td>
-                        <input type="radio" value="male">Male
-                        <input type="radio" value="female">Female
-                        <input type="radio" value="other">Others
+                        <input type="radio" value="male" name="n1" id="male">Male
+                        <input type="radio" value="female" name="n1" id="female">Female
+                        <input type="radio" value="other" name="n1" id="others">Others
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <label>Mobile</label>
+                        <label for="mobile">Mobile</label>
                     </td>
                     <td>
-                        <input type="number">
+                        <input type="number" id="mobile" name="mb">
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <label>Address</label>
+                        <label for="adr">Address</label>
                     </td>
                     <td>
-                        <textarea rows="5" cols="20">
+                        <textarea rows="5" cols="20" id="adr" name="address">
 
                         </textarea>
                     </td>
