--- a/Form_Examples/form4.html
+++ b/Form_Examples/form4.html
@@ -5,132 +5,132 @@
     </head>
     <body>
         
-        <form>
+        <form name="form4" action="Servlet4" method="post">
             <table cellspacing="5px" cellpadding="5px" align="center" bgcolor="silver">
                 <caption><h1>Sign Up</h1></caption>
                 <tr>
                     <td>
-                        <label>First Name</label>
+                        <label for="fn">First Name</label>
                     </td>
                     <td colspan="2">
-                        <input type="text" placeholder="Enter First Name..">
+                        <input type="text" placeholder="Enter First Name.." name="fname" id="fn">
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <label>Last Name</label>
+                        <label for="ln">Last Name</label>
                     </td>
                     <td colspan="2">
-                        <input type="text" placeholder="Enter Last Name..">
+                        <input type="text" placeholder="Enter Last Name.." id="ln" name="lname">
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <label>Screen Name</label>
+                        <label for="sn">Screen Name</label>
                     </td>
                     <td colspan="2">
-                        <input type="text" placeholder="Enter Screen Name..">
+                        <input type="text" placeholder="Enter Screen Name.." id="sn" name="sname">
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <label>Date of Birth</label>
+                        <label for="dob">Date of Birth</label>
                     </td>
                     <td>
-                        <select>
-                            <option value="one">January</option>
-                            <option value="two">February</option>
-                            <option value="three">March</option>
-                            <option value="Four">April</option>
-                            <option value="Five">May</option>
-                            <option value="six">June</option>
-                            <option value="seven">July</option>
-                            <option value="eight">August</option>
-                            <option value="nine">September</option>
-                            <option value="ten">October</option>
-                            <option value="eleven">November</option>
-                            <option value="twelve">December</option>
+                        <select id="dob">
+                            <option value="January">January</option>
+                            <option value="February">February</option>
+                            <option value="March">March</option>
+                            <option value="April">April</option>
+                            <option value="May">May</option>
+                            <option value="June">June</option>
+                            <option value="July">July</option>
+                            <option value="August">August</option>
+                            <option value="September">September</option>
+                            <option value="October">October</option>
+                            <option value="November">November</option>
+                            <option value="December">December</option>
                         </select>
                         <select>
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5</option>
-                            <option>6</option>
-                            <option>7</option>
-                            <option>8</option>
-                            <option>9</option>
-                            <option>10</option>
-                            <option>11</option>
-                            <option>12</option>
-                            <option>13</option>
-                            <option>14</option>
-                            <option>15</option>
-                            <option>16</option>
-                            <option>17</option>
-                            <option>18</option>
-                            <option>19</option>
-                            <option>20</option>
-                            <option>21</option>
-                            <option>22</option>
-                            <option>23</option>
-                            <option>24</option>
-                            <option>25</option>
-                            <option>26</option>
-                            <option>27</option>
-                            <option>28</option>
-                            <option>29</option>
-                            <option>30</option>
-                            <option>31</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9">9</option>
+                            <option value="10">10</option>
+                            <option value="11">11</option>
+                            <option value="12">12</option>
+                            <option value="13">13</option>
+                            <option value="14">14</option>
+                            <option value="15">15</option>
+                            <option value="16">16</option>
+                            <option value="17">17</option>
+                            <option value="18">18</option>
+                            <option value="19">19</option>
+                            <option value="20">20</option>
+                            <option value="21">21</option>
+                            <option value="22">22</option>
+                            <option value="23">23</option>
+                            <option value="24">24</option>
+                            <option value="25">25</option>
+                            <option value="26">26</option>
+                            <option value="27">27</option>
+                            <option value="28">28</option>
+                            <option value="29">29</option>
+                            <option value="30">30</option>
+                            <option value="31">31</option>
+                        </select>
+                        <select>
+                            <option value="1980">1980</option>
+                            <option value="1981">1981</option>
+                            <option value="1982">1982</option>
+                            <option value="1983">1983</option>
+                            <option value="1984">1984</option>
+                            <option value="1985">1985</option>
+                            <option value="1986">1986</option>
+                            <option value="1987">1987</option>
+                            <option value="1988">1988</option>
+                            <option value="1989">1989</option>
+                            <option value="1990">1990</option>
+                            <option value="1991">1991</option>
+                            <option value="1992">1992</option>
+                            <option value="1993">1993</option>
+                            <option value="1994">1994</option>
+                            <option value="1995">1995</option>
+                            <option value="1996">1996</option>
+                            <option value="1997">1997</option>
+                            <option value="1998">1998</option>
+                            <option value="1999">1999</option>
+                            <option value="2000">2000</option>
+                            <option value="2001">2001</option>
+                            <option value="2002">2002</option>
+                            <option value="2003">2003</option>
+                            <option value="2004">2004</option>
+                            <option value="2005">2005</option>
+                            <option value="2006">2006</option>
+                            <option value="2007">2007</option>
+                            <option value="2008">2008</option>
+                            <option value="2009">2009</option>
+                            <option value="2010">2010</option>
+                            <option value="2011">2011</option>
+                            <option value="2012">2012</option>
+                            <option value="2013">2013</option>
+                            <option value="2014">2014</option>
+                            <option value="2015">2015</option>
+                            <option value="2016">2016</option>
+                            <option value="2017">2017</option>
+                            <option value="2018">2018</option>
+                            <option value="2019">2019</option>
+                            <option value="2020">2020</option>
+                            <option value="2021">2021</option>
+                            <option value="2022">2022</option>
+                            <option value="2023">2023</option>
                         </select>
                     </td>
-                    <td>
-                    <select>
-                        <option>1982</option>
-                        <option>1983</option>
-                        <option>1984</option>
-                        <option>1985</option>
-                        <option>1986</option>
-                        <option>1987</option>
-                        <option>1988</option>
-                        <option>1989</option>
-                        <option>1990</option>
-                        <option>1991</option>
-                        <option>1992</option>
-                        <option>1993</option>
-                        <option>1994</option>
-                        <option>1995</option>
-                        <option>1996</option>
-                        <option>1997</option>
-                        <option>1998</option>
-                        <option>1999</option>
-                        <option>2000</option>
-                        <option>2001</option>
-                        <option>2002</option>
-                        <option>2003</option>
-                        <option>2004</option>
-                        <option>2005</option>
-                        <option>2006</option>
-                        <option>2007</option>
-                        <option>2008</option>
-                        <option>2009</option>
-                        <option>2010</option>
-                        <option>2011</option>
-                        <option>2012</option>
-                        <option>2013</option>
-                        <option>2014</option>
-                        <option>2015</option>
-                        <option>2016</option>
-                        <option>2017</option>
-                        <option>2018</option>
-                        <option>2019</option>
-                        <option>2021</option>
-                        <option>2022</option>
-                        <option>2023</option>
-                        <option>2024</option>
-                    </select>
-                </td>
                 </tr>
                 <tr>
                     <td>
@@ -143,54 +143,54 @@
                 </tr>
                 <tr>
                     <td>
-                        <label>Country</label>
+                        <label for="cn">Country</label>
                     </td>
                     <td>
-                        <select>
-                            <option>USA</option>
-                            <option>India</option>
-                            <option>France</option>
-                            <option>Canada</option>
+                        <select id="cn">
+                            <option value="USA">USA</option>
+                            <option value="India">India</option>
+                            <option value="France">France</option>
+                            <option value="Canada">Canada</option>
                         </select>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <label>E-mail</label>
+                        <label for="em">E-mail</label>
                     </td>
                     <td colspan="2">
-                        <input type="email" placeholder="Enter E-mail...">
+                        <input type="email" placeholder="Enter E-mail..." id="em" name="email">
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <label>Phone</label>
+                        <label for="ph">Phone</label>
                     </td>
                     <td colspan="2">
-                        <input type="number" placeholder="Enter Phone...">
+                        <input type="number" placeholder="Enter Phone..." id="ph" name="phone">
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <label>Password</label>
+                        <label for="pwd">Password</label>
                     </td>
                     <td colspan="2">
-                        <input type="password" >
+                        <input type="password" id="pwd" name="password">
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <label>Confirm Password</label>
+                        <label for="cp">Confirm Password</label>
                     </td>
                     <td colspan="2">
-                        <input type="password">
+                        <input type="password" id="cp" name="cpwd">
                     </td>
                 </tr>
                 <tr>
                     <td>
 
                     </td>
-                    <td colspan="2">
+                    <td >
                         <input type="checkbox"> I agree to the Terms of Use
                     </td>
                 </tr>
