--- a/Form_Examples/form1.html
+++ b/Form_Examples/form1.html
@@ -4,7 +4,7 @@
         <title>Form-1</title>
     </head>
     <body>
-        <form name="form1" action="Servlet1" method="get"><br>
+        <form name="form1" action="Servlet1" method="get">
             <table cellpadding="5px" cellspacing="5px" align="center" bgcolor="silver">
                <caption><h2>HTML Form</h2></caption>
                 <tr>
