--- a/Form_Examples/form4.html
+++ b/Form_Examples/form4.html
@@ -13,7 +13,7 @@
                         <label for="fn">First Name</label>
                     </td>
                     <td colspan="2">
-                        <input type="text" placeholder="Enter First Name.." name="fname" id="fn">
+                        <input type="text" placeholder="Enter First Name.." name="fname" id="fn" value="" required>
                     </td>
                 </tr>
                 <tr>
@@ -137,8 +137,8 @@
                         <label>Gender</label>
                     </td>
                     <td>
-                        <input type="radio" value="male" name="male">Male
-                        <input type="radio" value="female" name="male">Female
+                        <input type="radio" value="male" name="male" id="n1">Male
+                        <input type="radio" value="female" name="male" id="n2">Female
                     </td>
                 </tr>
                 <tr>
