--- a/PractoV2/doctorsv1.html
+++ b/PractoV2/doctorsv1.html
@@ -13,6 +13,14 @@
                 <a href="#"><font size="5">Doctors</font></a>&nbsp;&nbsp;
                 |&nbsp;&nbsp;
                 <a href="branches.html"><font size="5">Branches</font></a>
+                |&nbsp;&nbsp;
+                <a href="dregister.html"><font size="5">Doctor SignUp</font></a>
+                |&nbsp;&nbsp;
+                <a href="dlogin.html"><font size="5">Doctor SignIn</font></a>
+                |&nbsp;&nbsp;
+                <a href="pregister.html"><font size="5">Patient SignUp</font></a>
+                |&nbsp;&nbsp;
+                <a href="plogin.html"><font size="5">Patient SignIn</font></a>
             </p>
             <hr>
             <table border="1px" cellspacing="1px" cellpadding="10px">
