--- a/PractoV2/dlogin.html
+++ b/PractoV2/dlogin.html
@@ -41,7 +41,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <input type="checkbox">Login with OTP instead of password
+                        <input type="checkbox" id="check" name="ch1">Login with OTP instead of password
                     </td>
                 </tr>
                 <tr>
