--- a/PractoV2/dregister.html
+++ b/PractoV2/dregister.html
@@ -35,9 +35,9 @@
                     <td>
                         <label for="mn">Mobile Number</label><br>
                         <select>
-                            <option value="+91(IND)">+91(IND)</option>
-                            <option value="+65(SGP)">+65(SGP)</option>
-                            <option value="+63(PHL)">+63(PHL)</option>
+                            <option value="+91(IND)" name="in">+91(IND)</option>
+                            <option value="+65(SGP)" name="sgp">+65(SGP)</option>
+                            <option value="+63(PHL)" name="phl">+63(PHL)</option>
                         </select>
                         <input type="text" id="mn" name="mnum" placeholder="Mobile Number">
                     </td>
@@ -50,7 +50,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <input type="checkbox">Receive relavant offers from Practo
+                        <input type="checkbox" id="check" name="ch1">Receive relavant offers from Practo
                     </td>
                 </tr>
                 <tr>
